<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg4"
    tools:context=".Admin">

    <android.support.design.widget.TabLayout
        android:layout_width="352dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabGravity="center"
        app:tabIndicatorColor="@android:color/background_light"
        app:tabIndicatorHeight="3dp"
        app:tabTextColor="@color/colorPrimaryDark">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargar" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebase" />
    </android.support.design.widget.TabLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="351dp"
        android:layout_height="288dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transBoton"
            android:onClick="leerInterno"
            android:text="@string/leerInterno"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transBoton"
            android:text="@string/leerExterno"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transBoton"
            android:onClick="guardarInterno"
            android:text="@string/guardarInterno"
            android:textColor="@android:color/background_light"
            android:visibility="visible" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transBoton"
            android:text="@string/guardarExterno"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/transBoton"
            android:text="Firebase"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <ListView
        android:id="@+id/listabusquedas"
        android:layout_width="351dp"
        android:layout_height="197dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:divider="@android:drawable/divider_horizontal_bright"
        android:dividerHeight="4dp"
        android:scrollbars="horizontal|vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

</android.support.constraint.ConstraintLayout>